Added ServiceRolesProcessor